Добавляет работу с protobuf. Контракт на пользователя
