# internal/routes/orm.go
@@ -29,13 +29,25 @@ type RoutePoint struct {
 	Coordinates geometry.Geometry `gorm:"type:geometry(POINT,4326)"`
 }
 
-type DifficultyLevel struct {
-	UUID        uuid.UUID  `gorm:"type:uuid;default:gen_random_uuid();not null"`
-	Name        string     `gorm:"size:50;not null;uniqueIndex"`
-	Description string     `gorm:"type:text"`
-	CreatedAt   time.Time  `gorm:"type:timestamptz;default:now();not null"`
-	UpdatedAt   time.Time  `gorm:"type:timestamptz;default:now();not null"`
-	DeletedAt   *time.Time `gorm:"type:timestamptz;default:NULL;"`
+type Visit struct {
+	UUID         uuid.UUID  `gorm:"type:uuid;default:gen_random_uuid();not null"`
+	UserUUID     uuid.UUID  `gorm:"not null"`
+	RouteUUID    uuid.UUID  `gorm:"not null"`
+	LocationUUID uuid.UUID  `gorm:"not null"`
+	VisitTime    time.Time  `gorm:"not null"`
+	CreatedAt    time.Time  `gorm:"type:timestamptz;default:now();not null"`
+	DeletedAt    *time.Time `gorm:"type:timestamptz;default:NULL;"`
+}
+
+type Review struct {
+	UUID      uuid.UUID  `gorm:"type:uuid;default:gen_random_uuid();not null"`
+	UserUUID  uuid.UUID  `gorm:"not null"`
+	RouteUUID uuid.UUID  `gorm:"not null"`
+	Rating    int        `gorm:"not null"`
+	Comment   string     `gorm:"type:text"`
+	CreatedAt time.Time  `gorm:"type:timestamptz;default:now();not null"`
+	UpdatedAt time.Time  `gorm:"type:timestamptz;default:now();not null"`
+	DeletedAt *time.Time `gorm:"type:timestamptz;default:NULL;"`
 }
 
 type Region struct {
@@ -46,4 +58,23 @@ type Region struct {
 	CreatedAt   time.Time         `gorm:"type:timestamptz;default:now();not null"`
 	UpdatedAt   time.Time         `gorm:"type:timestamptz;default:now();not null"`
 	DeletedAt   *time.Time        `gorm:"type:timestamptz;default:NULL;"`
+}
+
+type Location struct {
+	UUID        uuid.UUID         `gorm:"type:uuid;default:gen_random_uuid();not null"`
+	Name        string            `gorm:"size:255;not null;uniqueIndex"`
+	Description string            `gorm:"type:text"`
+	Coordinates geometry.Geometry `gorm:"type:geometry(POINT,4326)"`
+	CreatedAt   time.Time         `gorm:"type:timestamptz;default:now();not null"`
+	UpdatedAt   time.Time         `gorm:"type:timestamptz;default:now();not null"`
+	DeletedAt   *time.Time        `gorm:"type:timestamptz;default:NULL;"`
+}
+
+type DifficultyLevel struct {
+	UUID        uuid.UUID  `gorm:"type:uuid;default:gen_random_uuid();not null"`
+	Name        string     `gorm:"size:50;not null;uniqueIndex"`
+	Description string     `gorm:"type:text"`
+	CreatedAt   time.Time  `gorm:"type:timestamptz;default:now();not null"`
+	UpdatedAt   time.Time  `gorm:"type:timestamptz;default:now();not null"`
+	DeletedAt   *time.Time `gorm:"type:timestamptz;default:NULL;"`
 }
